Simplify and refactor the application. Test all vital modules. Add Readme.md